Fixed a bug where navbar was hidden, added the z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ body {
     perspective: 500px;
 }
 
-.collapse .navbar-collapse {
+.navbar{
     z-index: 1;
 }
 /*** Text Overlays **/
